--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -12,8 +12,10 @@ body{
 .navbar{
     padding-top: 10px;
     padding-bottom: 10px;
-    border-bottom: 6px solid #629c44;
-}
+    border: none;
+    box-shadow: none;
+} 
+
 .navbar.navbar-default .navbar-collapse {
     border: 0;
     -webkit-box-shadow: none;
