--- a/search results/search-result.css
+++ b/search results/search-result.css
@@ -21,28 +21,41 @@ body{
 }
 
 .nav-pills>li>a:focus, .nav-pills>li>a:hover,  .nav-pills>li>a:active{
-    background-color: #588c3d;
+    background-color: #4f7e36;
 }
 
 .results{
-    border: 1px solid #000;
+    border: 1px solid #DBA632;
     padding: 8px;
     text-align: center;
     margin-bottom: 1em;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) { 
     .result-image{
-        padding-bottom: 5px;
-        height: 11em;
+        height: 5em;
         margin: 0 auto;
+        border-top: 5px solid #DBA632;
+        border-bottom: 3px solid #DBA632;
     }
 }
 
 @media screen and (min-width: 768px) { 
     .result-image{
-        padding-bottom: 5px;
         height: 9.4em;
         margin: 0 auto;
+        border-top: 3px solid #DBA632;
+        border-bottom: 3px solid #DBA632;
     }
+}
+
+.form-group .form-control-feedback {
+  top: 0;
+  pointer-events: initial; /* or - auto // or -  unset  */
+  cursor: pointer;
+}
+
+.result-name{
+    padding-top: 6px;
 }
